# JDResume

./: .gitattributes  README.md  my-resume.cls  resume.tex  test_agent_local.sh
.github/linters/: .yaml-lint.yml
.github/workflows/: cv-matcher.yaml  latex.yaml  super-linter.yaml
LaTeX/: resume.tex
agent/: .flake8  .gitignore  README.md  cv_matcher_agent.py  pyproject.toml
agent/cv_matcher/: __init__.py  cli.py  config.py  gemini_adapter.py  latex_parser.py  latex_writer.py
examples/: job_description_devops.txt  job_description_sre.txt
