[project]
name = "cv-matcher-agent"
version = "0.1.0"
description = "AI-powered CV adaptation agent using Gemini API"
authors = [
    {name = "Jérôme Ducret", email = "jducret@pm.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.3.0",
]

[project.scripts]
cv-matcher = "cv_matcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
